--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ngxs/logger-plugin": "^3.8.0",
     "@ngxs/store": "^3.7.6",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
