--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.2.0",
     "@ngxs/logger-plugin": "^3.8.0",
     "@ngxs/store": "^3.8.0",
+    "leaflet": "^1.9.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
