--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "^14.2.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
@@ -20,6 +21,7 @@
     "@angular/router": "^14.2.0",
     "@ngxs/logger-plugin": "^3.8.0",
     "@ngxs/store": "^3.8.0",
+    "angular-double-slider": "^2.0.2",
     "leaflet": "^1.9.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
